--- a/dbproject/src/main/resources/templates/post/list.mustache
+++ b/dbproject/src/main/resources/templates/post/list.mustache
@@ -1,22 +1,26 @@
 {{>/layout/header}}
-<!-- 바디의 시작? -->
+
+<!-- 컨테이너 시작 -->
 <div class="container mt-3">
-    <div class="card">
-        
-        <div class="card-body">
-          <h4 class="card-title">제목입니다.</h4>
-          
-          <a href="/post/1" class="btn btn-info">상세보기</a>
-        </div>
+
+  <!-- 게시글 아이템 시작 -->
+  {{#posts}}
+  <div class="card mb-3">
+      <div class="card-body">
+          <h4 class="card-title">{{title}}</h4>
+          <a href="/post/{{id}}" class="btn btn-dark">상세보기</a>
       </div>
+  </div>
+  {{/posts}}
+  <!-- 게시글 아이템 끝 -->
 
+  <ul class="pagination justify-content-center">
+      <li class="page-item disabled"><a class="page-link" href="#">이전</a></li>
+      <li class="page-item"><a class="page-link" href="#">다음</a></li>
+  </ul>
 
-      <ul class="pagination justify-content-center mt-3">
-        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
-    
 </div>
 <!-- 컨테이너 끝 -->
+
 {{>/layout/footer}}
 
