--- a/dbproject/src/main/resources/templates/user/updateForm.mustache
+++ b/dbproject/src/main/resources/templates/user/updateForm.mustache
@@ -7,13 +7,13 @@
     <form>
 <!-- 폼태그는 put delete 요청 불가 -->
         <div class="mb-3 mt-3">
-            <input type="text" class="form-control" value="ssar" id="username">
+            <input type="text" class="form-control" value={{principal.name}} id="username">
         </div>
         <div class="mb-3">
-            <input type="password" class="form-control" value="1234" id="password">
+            <input type="password" class="form-control" value={{principal.password}} id="password">
         </div>
         <div class="mb-3 ">
-            <input type="email" class="form-control" value="ssar@nate.com" id="email">
+            <input type="email" class="form-control" value={{principal,email}} id="email">
         </div>
             </label>
         </div>
