--- a/Springboot-mustache-Green-Blog-master/Springboot-mustache-Green-Blog-master/src/main/resources/templates/user/joinForm.mustache
+++ b/Springboot-mustache-Green-Blog-master/Springboot-mustache-Green-Blog-master/src/main/resources/templates/user/joinForm.mustache
@@ -6,7 +6,7 @@
     <!-- 회원가입 폼 시작 -->
     <form action="/join" method="post">
         <div class="mb-3 mt-3">
-            <input type="text" class="form-control" placeholder="Enter username" name="username" required>
+            <input type="text" class="form-control" placeholder="Enter username" name="username" id="username">
         </div>
         <div class="mb-3">
             <input type="password" class="form-control" placeholder="Enter password" name="password" required
@@ -21,5 +21,15 @@
 
 </div>
 <!-- 컨테이너 끝 -->
+<script>
+function usernameSameCheck(username){
+    let response = await fetch(`api/user/username/same-check?username=${username}`);
+    let responseJson = await response.json();
+}
 
+    $("#username").keyup((event)=>{
+    usernameSameCheck(event.target.value);
+    });
+
+</script>
 {{> /layout/footer}}
